--- a/index.html
+++ b/index.html
@@ -7,15 +7,12 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Your custom CSS -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
     <wp-chat></wp-chat>
 
-
-    <!-- Bootstrap JS Bundle with Popper -->
-
     <!-- Your custom JS -->
-    <script src="chat.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
