chat is working for now

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-    <wp-chat></wp-chat>
+    <wc-chat></wc-chat>
 
     <!-- Your custom JS -->
     <script type="module" src="index.js"></script>
