adding invite game message

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-    <!-- <wc-chat></wc-chat> -->
-    <wc-invite-game></wc-invite-game>
+    <wc-chat></wc-chat>
+    <!-- <wc-invite-game></wc-invite-game> -->
 
     <!-- Your custom JS -->
     <script type="module" src="index.js"></script>
