fixing user profile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Chat</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" />
     <!-- Your custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
@@ -15,5 +16,6 @@
 
     <!-- Your custom JS -->
     <script type="module" src="index.js"></script>
+    
 </body>
 </html>
