--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-    <wc-chat></wc-chat>
-    <!-- <wc-invite-game></wc-invite-game> -->
-
-    <!-- Your custom JS -->
+    <!-- <wc-chat></wc-chat> -->
+    <wc-message-date>   </wc-message-date>
     <script type="module" src="index.js"></script>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
