--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
-    <!-- <wc-chat></wc-chat> -->
-    <wc-message-date>   </wc-message-date>
+    <!-- <div id="chat"> -->
+        <wc-chat></wc-chat>
+    <!-- </div> -->
     <script type="module" src="index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
 </body>
